--- a/Code Templates/WebDev1/index.html
+++ b/Code Templates/WebDev1/index.html
@@ -1,51 +1,50 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-<head>
-
-    <body>
-        <h1 class="title">The Most Successful Labels in Hip Hop</h1>
-        <h3>
-            Every hip hop record label, since 1989, sorted by their artist' char performance on Billboard
-        </h3>
-        <h4>
-            <a href="https://twitter.com/MattD_Official">
-                Matt Daniels
-            </a>
-            , 
-            <a href="https://twitter.com/KevinBeacham">
-                Kevin Beacham
-            </a>
-            - Rhymessayers
-        </h4>
-        <p> 
-            In hip hop. So much can be explained by the rise and fall of record lables 
-        </p>
-        <p> 
-            Lil Wayne's ascent is the story of 
-            <b> 
-                Cash Money
-            </b>
-            . The Dirty South starts with 
-            <b> 
-                LaFace Records
-            </b>
-            . The east-coast/west-coast feud is 
-            <b> 
-                Bad Boy vs. Death Row
-            </b>
-            . In hip hop, the artist-label relationship isn't just a business deal, but a commitment to an identity
-        </p>
-        <p>
-            We wanted to surface the notable labels in hip hop's history, so we measured every label by its artists' char performance on Billboard(collaborating with 
-            <a href="https://twitter.com/KevinBeacham">
-                Kevin Beacham
-             </a> 
-            of 
-            <a href="https://en.wikipedia.org/wiki/Rhymesayers_Entertainment">
-                Rhymessayers
-            </a> 
-             to call out insights). By highlighting the labels who produced the most hits at any given time, we'd understand who was wielding enormous infulence on hip hop's sound, distribution,and directions.
-        </p>
-
-
+<body>
+    <h1>
+        The Most Successful Labels in Hip Hop
+    </h1>
+    <h3>
+        Every hip hop record label, since 1989, sorted by their artist's chart performance on Billboard
+    </h3>
+    <h4>
+        <a href="https://twitter.com/MattD_Official">
+            Matt Daniels
+        </a>
+        ,
+        <a href="https://twitter.com/KevinBeacham">
+            Kevin Beacham
+        </a>
+        - Rhymesayers
+    </h4>w
+    <p>
+        In hip hop, so much can be explained by the rise and fall of record labels.
+    </p>
+    <p>
+        Lil Wayne's ascent is the story of
+        <b>
+            Cash w
+        </b>
+        . The Dirty South starts with
+        <b>
+            LaFace Records
+        </b>
+        . The east-coast/west-coast feud is
+        <b>
+            Bad Boy vs. Death Row
+        </b>
+        . In hip hop, the artist-label relationship isn't just a business deal, but a commitment to an identity.
+    </p>
+    <p>
+        We wanted to surface the notable labels in hip hop's history, so we measured every label by its artists' chart performance on Billboard (collaborating with
+        <a href="https://twitter.com/KevinBeacham">
+            Kevin Beacham
+        </a>
+        of
+        <a href="https://en.wikipedia.org/wiki/Rhymesayers_Entertainment">
+            Rhymesayers
+        </a>
+        to call out insights). By highlighting the labels who produced the most hits at any given time, we'd understand who was wielding enormous influence on hip hop's sound, distribution, and direction.
+    </p>
+</body>
+</html>
