--- a/Code Templates/HTML/CSS/index.html
+++ b/Code Templates/HTML/CSS/index.html
@@ -1,12 +1,58 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en">
 <head>
-    <p style="font-size: 24px;">
-        The Most
-    </p>
+    <title>External CSS Example</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
+    <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
-
+    <header>
+        <h1 style="font-size: 18px;">
+            THE MOST
+        </h1>
+        <h1 style="font-size: 36px;">
+            TIMELESS SONGS
+        </h1>
+        <h1 style="font-size: 18px;">
+            OF ALL-TIME
+        </h1>
+        <h1 style="font-size: 12px;">
+            USING
+            <a style="color: #1DB954;">
+                SPOTIFY
+            </a>
+            TO MEASURE THE POPULARITY OF OLDER MUSIC
+        </h1>
+        <h1 style="font-size: 10px;">
+            BY
+            <a href="https://twitter.com/MattD_Official">
+                MATT DANIELS
+            </a>
+            EDITOR
+        </h1>
+    </header>
+    <main>
+        <h1 style="font-size: 16px;">
+            This is a story about proving with data, that
+            <i>
+                No Diggity
+            </i>
+            by Blackstreet is timeless
+        </h1>
+        <p>
+            Used recently, it was impossible to measure the poopularity of old music. Billboard charts and album sales only tell us about a song's popularity at the time of its release'
+        </p>
+        <p>
+            But now we have Spotify, a buffet of all od mustic, new and old. Tracks with fewer plays are fading into obscurity. And those with more plays are premaining in the cultrural ether.
+        </p>
+        <p>
+            20 years have passsed since
+            <i>
+                No Diggity's
+            </i>
+            release. Its popularity on Spotify, relative to every other song from the 90s, is a strong singal for wherther it will be rembered by our children's children. So lets's examine every song that ever charted, 1990-199, and rank them by number of plays of Spotify, today.
+        </p>
+    </main>
 </body>
 </html>
