--- a/Code Templates/HTML/CSS/NBA.html
+++ b/Code Templates/HTML/CSS/NBA.html
@@ -6,11 +6,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Cantarell&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>
-        Do NBA refs favor the home team
-    </h1>
-    <p>
-        Analyzing 13,658 review calls by the NBA to rank teams by favorable home court officating.
-    </p>
+    <div class="container">
+        <div class="left">
+            <h1>
+                Do NBA refs favor the home team
+            </h1>
+            <p>
+                Analyzing 13,658 review calls by the NBA to rank teams by favorable home court officating.
+            </p>
+        </div>
+        <div class="right">
+            <img src="giphy.gif" />
+        </div>
+    </div>
 </body>
 </html>
