new JS folder in code template

--- a/Final Project/HTML/Genshin.html
+++ b/Final Project/HTML/Genshin.html
@@ -2,8 +2,22 @@
 
 <html lang="en">
 <head>
-    
 </head>
 <body>
+    <h1>
+        My Question
+    </h1>
+    <p>
+        How does the 5-star characters that appear on the featured banner correlates to Genshin Impact’s banner revenue?
+
+    </p>
+    <h1>My Data</h1>
+    <!-- Your code here -->
+    <h1>My Analysis</h1>
+    <!-- Your code here -->
+    <h1>My Visualizations</h1>
+    <!-- Your code here -->
+    <h1>My Answer</h1>
+    <!-- Your code here -->
 </body>
 </html>
