--- a/Code Templates/JS/index.html
+++ b/Code Templates/JS/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <style></style>
     <meta charset="utf-8" />
     <title>The Art of Sampling</title>
     <link rel="stylesheet" type="text/css" href="Style.css">
@@ -11,27 +12,33 @@
     <script src="Script.js"></script>
 </head>
 <body>
+
+<main>
+<div class="fade-out" id="all">
     <p class="green">
         The Art of Sampling
     </p>
     <p class="under">
         How Robert Glasper sampled Miles Davis on "Ghetto Walkin"
     </p>
-    <p class="button">
-        START JAM   
-    </p>
+    <button class=button onclick="fadeOutElements()" id="button">start jam</button>
     <p class="headphones">
         HEADPHONES RECOMMENDED
     </p>
     <p class="transition1">
-        Pianitst Rober Glasper is my jam. He bridges jazz and hip hop. Classic and modern.
+        Pianist Rober Glasper is my jam. He bridges jazz and hip hop. Classic and modern.
     </p>
-    <p class="transition2">
+</div>
+<div class="fade-in" id="fade-in">
+        <p class="transition2">
         He's on several tracks of
         <i>
             To Pimp a Butterfly.
         </i>
         The dude has two R&B Grammys in the past four years.
-    </p>
+        </p>
+    </div>
+
+</main>
 </body>
 </html>
