--- a/Final Project/HTML/Genshin.html
+++ b/Final Project/HTML/Genshin.html
@@ -2,22 +2,27 @@
 
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Genshin Revenue Analysis</title>
+    <link rel="stylesheet" href="GenshinStyle.css">
 </head>
 <body>
-    <h1>
-        My Question
-    </h1>
-    <p>
-        How does the 5-star characters that appear on the featured banner correlates to Genshin Impact’s banner revenue?
-
-    </p>
-    <h1>My Data</h1>
-    <!-- Your code here -->
-    <h1>My Analysis</h1>
-    <!-- Your code here -->
-    <h1>My Visualizations</h1>
-    <!-- Your code here -->
-    <h1>My Answer</h1>
-    <!-- Your code here -->
+<div id="landing">
+    <div id="left">
+        <h1 class="title">
+            How does the 5-star characters that appears on the featured banner correlates to Genshin Impact’s banner revenue?
+        </h1>
+        <div id="buttons">
+            <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinSearch.html'">5-Star Character Search</button>
+            <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinAnalysis.html'">Data Analysis</button>
+            <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinAbout.html'">About this</button>
+        </div>
+    </div>
+    <div id="right">
+        <img src="Paimon.png" alt="An image of Genshin Impact's mascot, Paimon." class="paimon">
+    </div>
+</div>
+<script src="GenshinStyle.js"></script>
 </body>
 </html>
