--- a/Final Project/HTML/Genshin.html
+++ b/Final Project/HTML/Genshin.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genshin Revenue Analysis</title>
+    <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
+    <title>Home</title>
     <link rel="stylesheet" href="GenshinStyle.css">
 </head>
 <body>
 <div id="landing">
     <div id="left">
         <h1 class="title">
-            How does the 5-star characters that appears on the featured banner correlates to Genshin Impact’s banner revenue?
+            <b>
+                How does the 5-star characters that appears on the featured banner correlates to Genshin Impact’s banner revenue?
+            </b>
         </h1>
         <div id="buttons">
             <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinSearch.html'">5-Star Character Search</button>
