Update to final html

--- a/Final Project/HTML/GenshinSearch.html
+++ b/Final Project/HTML/GenshinSearch.html
@@ -4,11 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="GenshinSearch.css"> 
     <title>Genshin 5-Star Character Search</title>
 </head>
 <body>
-    <h1>
-        search works
-    </h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Pyro</a></li>
+                <li><a href="#">Hydro</a></li>
+                <li><a href="#">Anemo</a></li>
+                <li><a href="#">Electro</a></li>
+                <li><a href="#">Dendro</a></li>
+                <li><a href="#">Pyro</a></li>
+                <li><a href="#">Geo</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Welcome to My Website</h1>
+        <p>This is some content...</p>
+    </main>
+
 </body>
 </html>
