new update to final project

--- a/Final Project/HTML/Pyro.html
+++ b/Final Project/HTML/Pyro.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -23,11 +23,5 @@
             </ul>
         </nav>
     </header>
-
-    <main>
-        <h1 class="title">Please search for whatever 5-Star you want</h1>
-        <p class="index">*Note this we only have data before verison 4.1 of Genshin Impact*</p>
-    </main>
-
 </body>
 </html>
