--- a/Final Project/HTML/GenshinAbout.html
+++ b/Final Project/HTML/GenshinAbout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Genshin Data Analysis</title>
+    <title>Genshin About</title>
 </head>
 <body>
     <h1>
