--- a/Final Project/HTML/GenshinSearch.html
+++ b/Final Project/HTML/GenshinSearch.html
@@ -14,12 +14,12 @@
             <ul>
                 <li class="Home"><a href="Genshin.html">Home</a></li>
                 <li class="Pyro"><a href="Pyro.html">Pyro</a></li>
-                <li class="Hydro"><a href="#">Hydro</a></li>
-                <li class="Anemo"><a href="#">Anemo</a></li>
-                <li class="Electro"><a href="#">Electro</a></li>
-                <li class="Dendro"><a href="#">Dendro</a></li>
-                <li class="Cryo"><a href="#">Cryo</a></li>
-                <li class="Geo"><a href="#">Geo</a></li>
+                <li class="Hydro"><a href="Hydro.html">Hydro</a></li>
+                <li class="Anemo"><a href="Anemo.html">Anemo</a></li>
+                <li class="Electro"><a href="Electro.html">Electro</a></li>
+                <li class="Dendro"><a href="Dendro.html">Dendro</a></li>
+                <li class="Cryo"><a href="Cryo.html">Cryo</a></li>
+                <li class="Geo"><a href="Geo.html">Geo</a></li>
             </ul>
         </nav>
     </header>
