analysis update for final project :)

--- a/Final Project/HTML/Genshin.html
+++ b/Final Project/HTML/Genshin.html
@@ -17,8 +17,8 @@
             </b>
         </h1>
         <div id="buttons">
+            <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinAnalysis.html'">Start analysis adventure</button>
             <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinSearch.html'">5-Star Character Search</button>
-            <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinAnalysis.html'">Data Analysis</button>
             <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinAbout.html'">About this</button>
         </div>
     </div>
