Added parts to genshin analysis for final project

--- a/Final Project/HTML/GenshinAnalysis.html
+++ b/Final Project/HTML/GenshinAnalysis.html
@@ -7,8 +7,67 @@
     <title>Genshin Data Analysis</title>
 </head>
 <body>
-    <h1>
-        analysis works
-    </h1>
+    <p class="intro">
+        Hello today we are going to explore the world of Teyvat while learning how limited 5-star characters correlates with Genshin Impact's banner revenue.
+    <p class="avg">
+        Did you know that on avarage each character banner makes roughly around $18.3 million, while only lasting for 20 days? That's a lot of money if you think about it. If you do that math that means Genshin makes $___ a year from banner sells alone!
+    </p>
+    <p class="banner graph">
+        Here is a graph that shows how much money Genshin has made with each verison patch
+    </p>
+    <!--How revenue correlates with how many times a character has made an appearance-->
+    <p>
+        This would mean that the more time the character has appear in a banner, the more money the character has made overall. Here is are 2 graphs that showcasse the total amount of time that a character has reappear in a banner and the total they money they made since their release.
+    </p>
+    <p>
+        From these graph we can see that most character has made a appearanace in the limited banner for at least 3 time, and on avarage a character makes a total of $__ million.
+    </p>
+    <p>
+        This supports the claim since we can see that characters who has made an appearanace more than 3 times make more money than the avarage total a character would make. While characters who has made an apperance less than 3 times make less money than the avarage total a character would make.
+    </p>
+    <p>
+        This claim can be seen and heavily implied by the characters Tartaglia and Cyno.
+    </p>
+    <p>
+        Tartaglia has have 5 appearanaces on the 5-star limited banner and has made a total of $55,671,528.
+    </p>
+    <p>
+        While Cyno has only 2 appearanaces on the 5-star limited banner and only has made a total of $$32,250,069.
+    </p>
+    <p>
+        This makes sense since the more times the character makes an appearance, the more chances the players have trying to get that character, which leads to spending more money since the character banner only lasts for a limited amount of days. 
+    </p>
+    <!--How revenue correlates with the abyss usuage number that a character has-->
+    <p>
+        Another way that 5-star characters correlates with Genshin Impact's banner revenue, is their usuage rate in Spriral Abyss
+    </p>
+    <p>
+        The avarage usage rate in percent of a five-star is %___, here is a graph that shows the overall aravage abyss usuage rate of each limited 5-star character.
+    </p>
+    <p>
+        As we can see from the graph, characters with higher abyss usage rate (%__ or above) make more money than the avarage total, while a character would make with a lower abyss usage rte (%__ or lower) make less money than the avarage total.
+    </p>
+    <p>
+        This makes sense since higher usage rate requires the player to have the character to use it, which means some people would have to spend money to get the character.
+    </p>
+    <!-- <p>
+        We can also see from the graphs that older characters in this game have lower abyss usage rate. This is because older characters have old and outdated playstyle for the game, and since players prefer newer and smoother feeling playstyle, less players want spend money on the older characters of the game.
+    </p>
+    <p>
+       Even though character released before verison 2.0 has had plenty of apperances on limited banners, the characters       
+    </p> -->
+    <!--Conclusion-->
+    <p>
+        So then what should Genshin do in order to make more money? Well currently I believe there are two main changes they can do to increase their revenue.
+    </p>
+    <p>
+        The first option is for them to introduce triple banners, which means they have 3 limited 5-star banners running at the same time. This way the avarage waiting time would be lower, allowing the players to wait less to get the character that they want. Allowing them to have a chance to spend more money.
+    </p>
+    <p>
+        The second option is giving updates and buffs to older characters in the game. This way character feels newer and nicer to play with, which will increase the character abyss usage rates, allowing more players to want that specific characters.
+    </p>
+    <!-- <p class="total">
+        If you do that math that means Genshin makes $___ a year from banner sells alone!
+    </p> -->
 </body>
 </html>
