--- a/Final Project/HTML/Genshin.html
+++ b/Final Project/HTML/Genshin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
     <title>Home</title>
-    <link rel="stylesheet" href="GenshinStyle.css">
+    <link rel="stylesheet" href="Genshin.css">
 </head>
 <body>
 <div id="landing">
@@ -26,6 +26,6 @@
         <img src="Paimon.png" alt="An image of Genshin Impact's mascot, Paimon." class="paimon">
     </div>
 </div>
-<script src="GenshinStyle.js"></script>
+<script src="Genshin.js"></script>
 </body>
 </html>
