new final project update

--- a/Final Project/HTML/GenshinAnalysis.html
+++ b/Final Project/HTML/GenshinAnalysis.html
@@ -3,10 +3,12 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="GenshinAnalysis.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genshin Data Analysis</title>
 </head>
 <body>
+<div class="horizontal">
     <p class="intro">
         Hello today we are going to explore the world of Teyvat while learning how limited 5-star characters correlates with Genshin Impact's banner revenue.
     <p class="avg">
@@ -32,7 +34,7 @@
         Tartaglia has have 5 appearanaces on the 5-star limited banner and has made a total of $55,671,528.
     </p>
     <p>
-        While Cyno has only 2 appearanaces on the 5-star limited banner and only has made a total of $$32,250,069.
+        While Cyno has only 2 appearanaces on the 5-star limited banner and only has made a total of $32,250,069.
     </p>
     <p>
         This makes sense since the more times the character makes an appearance, the more chances the players have trying to get that character, which leads to spending more money since the character banner only lasts for a limited amount of days. 
@@ -69,5 +71,9 @@
     <!-- <p class="total">
         If you do that math that means Genshin makes $___ a year from banner sells alone!
     </p> -->
+</div>
+<img class="floating-gif" src="Lumine-Idle.gif" alt="Lumine-Idle">
+<!-- <img class="Lumine-Run" src="Lumine-Run.gif" alt="Lumine-Run"> -->
+<script src="GenshinAnalysis.js"></script>
 </body>
 </html>
