Update to final project data analysis page

--- a/Final Project/HTML/Genshin.html
+++ b/Final Project/HTML/Genshin.html
@@ -19,7 +19,7 @@
         <div id="buttons">
             <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinAnalysis.html'">Start analysis adventure</button>
             <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinSearch.html'">5-Star Character Search</button>
-            <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinAbout.html'">About this</button>
+            <button class="rounded-button" id="genshin" onclick="window.location.href='GenshinAbout.html'">About this webpage</button>
         </div>
     </div>
     <div id="right">
