--- a/Final Project/HTML/GenshinAbout.html
+++ b/Final Project/HTML/GenshinAbout.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="GenshinAbout.css">
     <title>Genshin About</title>
 </head>
 <body>
     <h1>
         about works
     </h1>
+    <img class="Lumine-Idle" src="Lumine_Idle.GIF" alt="Lumine-Idle">
 </body>
 </html>
