--- a/Final Project/HTML/GenshinAnalysis.html
+++ b/Final Project/HTML/GenshinAnalysis.html
@@ -10,7 +10,9 @@
 <body>
 <div class="horizontal">
     <p class="intro">
-        Hello today we are going to explore the world of Teyvat while learning how limited 5-star characters correlates with Genshin Impact's banner revenue.
+        Hello today we are going to explore the world of Teyvat while learning how limited 5-star characters correlates with Genshin Impact's banner revenue. Please use the left and right arrow keys or the scroll wheel to move forward and backwards.
+        <img class="ArrowKeys" src="ArrowKeys.PNG" alt="Arrow keys">
+        <img class="Mouse" src="Mouse.PNG" alt="Mouse Scroll">
     <p class="avg">
         Did you know that on avarage each character banner makes roughly around $18.3 million, while only lasting for 20 days? That's a lot of money if you think about it. If you do that math that means Genshin makes $___ a year from banner sells alone!
     </p>
@@ -29,6 +31,8 @@
     </p>
     <p>
         This claim can be seen and heavily implied by the characters Tartaglia and Cyno.
+        <img class="Tartaglia" src="TartagliaChibi.png" alt="Chibi Tartaglia">
+        <img class="Cyno" src="CynoChibi.png" alt="Chibi Cyno">
     </p>
     <p>
         Tartaglia has have 5 appearanaces on the 5-star limited banner and has made a total of $55,671,528.
@@ -50,6 +54,11 @@
         As we can see from the graph, characters with higher abyss usage rate (%__ or above) make more money than the avarage total, while a character would make with a lower abyss usage rte (%__ or lower) make less money than the avarage total.
     </p>
     <p>
+        This claim can be seen and heavily implied by the characters Kazuha and Eula.
+        <img class="Kazuha" src="KazuhaChibi.png" alt="Chibi Kazuha">
+        <img class="Eula" src="EulaChibi.png" alt="Chibi Eula">
+    </p>
+    <p>
         This makes sense since higher usage rate requires the player to have the character to use it, which means some people would have to spend money to get the character.
     </p>
     <!-- <p>
@@ -60,20 +69,23 @@
     </p> -->
     <!--Conclusion-->
     <p>
-        So then what should Genshin do in order to make more money? Well currently I believe there are two main changes they can do to increase their revenue.
+        So then what should Genshin do in order to make more money? Well currently I believe there are currently two main changes they can do to increase their revenue.
     </p>
     <p>
-        The first option is for them to introduce triple banners, which means they have 3 limited 5-star banners running at the same time. This way the avarage waiting time would be lower, allowing the players to wait less to get the character that they want. Allowing them to have a chance to spend more money.
+        The first option is for them to introduce triple banners, which means they have 3 limited 5-star banners running at the same time. This way the avarage waiting time would be lower, allowing the players to wait less to get the character that they want. Allowing them to have a chance to spend more money to get the character that they want.
     </p>
     <p>
         The second option is giving updates and buffs to older characters in the game. This way character feels newer and nicer to play with, which will increase the character abyss usage rates, allowing more players to want that specific characters.
     </p>
-    <!-- <p class="total">
-        If you do that math that means Genshin makes $___ a year from banner sells alone!
-    </p> -->
+    <button class="rounded-button" id="genshin" onclick="window.location.href='Genshin.html'">Return back to home page</button>
+    <p>
+         
+    </p>
 </div>
-<img class="floating-gif" src="Lumine-Idle.gif" alt="Lumine-Idle">
-<!-- <img class="Lumine-Run" src="Lumine-Run.gif" alt="Lumine-Run"> -->
+<div class="image-container">
+    <img class="Lumine-Idle" src="Lumine_Idle.GIF" alt="Lumine-Idle">
+    <img class="Lumine-Run" src="Lumine_Run.GIF" alt="Lumine-Run">
+</div>
 <script src="GenshinAnalysis.js"></script>
 </body>
 </html>
