--- a/Final Project/HTML/GenshinSearch.html
+++ b/Final Project/HTML/GenshinSearch.html
@@ -27,6 +27,7 @@
     <main>
         <h1 class="title">Please search for whatever 5-Star you want</h1>
         <p class="index">*Note this we only have data before verison 4.1 of Genshin Impact*</p>
+        <img class="Lumine-Idle" src="Lumine_Idle.GIF" alt="Lumine-Idle">
     </main>
 
 </body>
