Added fade in and out button

--- a/Final Project/HTML/GenshinAnalysis.html
+++ b/Final Project/HTML/GenshinAnalysis.html
@@ -15,20 +15,14 @@
         <p> To navigate the journey please use the left and right arrow keys</p>
         <p> Please also note that this was made before verison 4.1 so the data might be inaccurate for current time</p>
     </div>
-<div class="horizontal">
+<div class="horizontal invisible" id="custom-animation">
     <!--Introduction-->
     <p>
         Welcome, travellers, to the amazing world of Teyvat! As we journey through this land, we'll explore how the limited 5-star characters in Genshin Impact affect the game's banner sales.
     </p>
-    <!-- <p>
-        To better grasp our journey ahead, let's first understand the game's basics.
-    </p>
     <p>
-        Genshin Impact is a Gacha game where you every attempt to acquire characters on a "banner" based on luck.
+        So let’s find out how Hoyoverse (the creator of Genshin Impact) can maxzime their profit even more from character banners, even though they already exploit the player base and make millions a month already.
     </p>
-    <p>
-        Banners are limited-time event that showcases special limited characters you have the chance of getting, where 5-stars are the rarest rarity. This is how Genshin makes most of its revenue.
-    </p> -->
     <!--How revenue correlates with how many times a character has made an appearance-->
     <p>
         Did you know that on avarage each character banner makes roughly around $18.3 million, while only lasting for 20 days? That's a lot of money if you think about it. If you do that math that means Genshin makes $330 million a year from banner sells alone!
@@ -83,12 +77,6 @@
     <p>
         This makes sense since higher usage rate requires the player to have the character to use it, which means some people would have to spend money to get the character.
     </p>
-    <!-- <p>
-        We can also see from the graphs that older characters in this game have lower abyss usage rate. This is because older characters have old and outdated playstyle for the game, and since players prefer newer and smoother feeling playstyle, less players want spend money on the older characters of the game.
-    </p>
-    <p>
-       Even though character released before verison 2.0 has had plenty of apperances on limited banners, the characters       
-    </p> -->
     <!--Conclusion-->
     <p>
         So then what should Genshin do in order to make more money? Well currently I believe there are currently two main changes they can do to increase their revenue.
@@ -99,7 +87,6 @@
     <p>
         The second option is giving updates and buffs to older characters in the game. This way character feels newer and nicer to play with, which will increase the character abyss usage rates, allowing more players to want that specific characters.
     </p>
-    <!-- <button class="rounded-button" id="genshin" onclick="window.location.href='Genshin.html'">Return back to home page</button> -->
     <p>
          
     </p>
@@ -109,7 +96,7 @@
     <img class="Lumine-Run" src="Lumine_Run.GIF" alt="Lumine-Run">
 </div>
 <div class="progress-container">
-    <div class="progress-bar" id="myBar"></div>
+    <div class="progress-bar" id="progressBar"></div>
 </div>
 <script src="GenshinAnalysis.js"></script>
 </body>
