new html text update

--- a/Final Project/HTML/GenshinAnalysis.html
+++ b/Final Project/HTML/GenshinAnalysis.html
@@ -22,7 +22,7 @@
         Welcome, travellers, to the amazing world of Teyvat! Today we'll journey through this land, and explore how the limited 5-star characters in Genshin Impact affect the game's banner sales.
     </p>
     <p>
-        So let’s find some more ways that Hoyoverse (the creator of Genshin Impact) can maximize their profit even more from their character banners, by looking at all the 5-star character banners and spiral abyss patterns to see what it tells us, even though they make millions a month already.
+        So let’s find some more ways that Hoyoverse (the creator of Genshin Impact) can maximize their profit even more from their character banners, by looking at all the 5-star character banners and spiral abyss patterns to see what it tells us.
     </p>
     <!--How revenue correlates with how many times a character has made an appearance-->
     <p>
