more useless change to html text

--- a/Final Project/HTML/GenshinAnalysis.html
+++ b/Final Project/HTML/GenshinAnalysis.html
@@ -26,7 +26,7 @@
     </p>
     <!--How revenue correlates with how many times a character has made an appearance-->
     <p>
-        Did you know that on avarage each character banner makes roughly around $18.3 million, while only lasting for 20 days? That's a lot of money if you think about it. If you do that math that means Genshin makes $330 million a year from banner sells alone!
+        To start, did you know that on avarage each character banner makes roughly around $18.3 million, while only lasting for 20 days? That's a lot of money if you think about it. If you do that math that means Genshin makes $330 million a year from banner sells alone!
     </p>
     <p>
         Here is a graph that shows how much money Genshin has made with each verison patch all the way up to 4.0.
@@ -73,7 +73,7 @@
         <canvas id="cynoGraph2"></canvas>
       </div>
     <p>
-        This makes sense since the more times the character makes an appearance, the more chances the players have trying to get that character, which leads to spending more money since the character banner only lasts for a limited amount of days. 
+        This makes sense since the players have more chances trying to get that character, which leads to spending more money since the character banner only lasts for a limited amount of days. 
     </p>
     <!--How revenue correlates with the abyss usuage number that a character has-->
     <p>
